# py-producer-graph

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: build.yml
src/demo/: demo.py
src/producer_graph/: __init__.py  _pipeline.py  _processor.py
tests/: test_pipeline.py  test_processor.py
