[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "producer-graph"
dynamic = ["version"]
description = 'Simple producer-consumer graph orchestration'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Erik Abair", email = "erik.abair@bearbrains.work" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/abaire/producer-graph#readme"
Issues = "https://github.com/abaire/producer-graph/issues"
Source = "https://github.com/abaire/producer-graph"

[tool.hatch.version]
path = "src/producer_graph/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/producer_graph tests}"

[tool.coverage.run]
source_pkgs = ["producer_graph", "tests"]
branch = true
parallel = true
omit = [
  "src/producer_graph/__about__.py",
]

[tool.coverage.paths]
producer_graph = ["src/producer_graph", "*/producer-graph/src/producer_graph"]
tests = ["tests", "*/producer-graph/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
